--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
-    background-color: rgb(143, 218, 156);
+    background-color:#FFF1C9;
+    padding: 10px 10px;
+    margin: 50px 50px;
+    border: 10px 10px;
 }
 
 li{
@@ -9,18 +12,30 @@ li{
 a{
     
     padding: 8px;
-    color: white;
+    color: black;
     text-decoration: none;
 }
 a:hover{
-    background-color: aquamarine;
+    background-color:whitesmoke;
 }
 
 nav{
-    background-color: black;
-    padding: 8px;
+    background-color:tan;
+    text-align: center;
+    padding: 15px;
 }
 
 h1{
     text-align: center;
+}
+
+iframe[seamless]{
+    border: none;
+    
+}
+
+.center{
+    margin:auto;
+    width: 50%;
+    padding: 10px
 }
