--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#FFF1C9;
+    background-color:#F9F3EE;
     padding: 10px 10px;
     margin: 50px 50px;
     border: 10px 10px;
